chore: 细节优化