@@ -12,7 +12,6 @@ import lombok.extern.slf4j.Slf4j;
 import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -20,15 +19,13 @@ import java.util.UUID;
  * Java 代码沙箱模板方法的实现
  */
 @Slf4j
-public class JavaCodeSandboxTemplate implements CodeSandbox {
+public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
 
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
 
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
 
-    private static final long TIME_OUT = 10000L;
-
-    public static final List<String> blackList = Arrays.asList("Files", "exec");
+    private static final long TIME_OUT = 5000L;
 
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
@@ -36,40 +33,37 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
         String code = executeCodeRequest.getCode();
         String language = executeCodeRequest.getLanguage();
 
-        // 1. 把用户代码保存为文件
-        File userCodefile = saveCodeToFile(code);
+//        1. 把用户的代码保存为文件
+        File userCodeFile = saveCodeToFile(code);
 
-        // 2. 编译代码，得到 class 文件
-        ExecuteMessage compileFileExecuteMessage = compileFile(userCodefile);
+//        2. 编译代码，得到 class 文件
+        ExecuteMessage compileFileExecuteMessage = compileFile(userCodeFile);
         System.out.println(compileFileExecuteMessage);
 
+        // 3. 执行代码，得到输出结果
+        List<ExecuteMessage> executeMessageList = runFile(userCodeFile, inputList);
 
-        // 3. 运行代码，得到输出结果
-        List<ExecuteMessage> executeMessageList = runFiles(userCodefile, inputList);
-
-
-        // 4. 收集整理输出结果
+//        4. 收集整理输出结果
         ExecuteCodeResponse outputResponse = getOutputResponse(executeMessageList);
 
-        // 5. 文件清理
-        boolean b = deleteFile(userCodefile);
+//        5. 文件清理
+        boolean b = deleteFile(userCodeFile);
         if (!b) {
-            log.error("deleteFile error, userCodeFile = {}", userCodefile.getAbsolutePath());
+            log.error("deleteFile error, userCodeFilePath = {}", userCodeFile.getAbsolutePath());
         }
-        // 6。 错误处理，提升程序健壮性
         return outputResponse;
     }
 
+
     /**
-     * 1. 把用户代码保存为文件
-     *
-     * @param code
+     * 1. 把用户的代码保存为文件
+     * @param code 用户代码
      * @return
      */
     public File saveCodeToFile(String code) {
         String userDir = System.getProperty("user.dir");
         String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
-        // 判断全局代码目录是否存在，没有则创建
+        // 判断全局代码目录是否存在，没有则新建
         if (!FileUtil.exist(globalCodePathName)) {
             FileUtil.mkdir(globalCodePathName);
         }
@@ -82,49 +76,47 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
     }
 
     /**
-     * 2. 编译代码，得到 class 文件
-     *
+     * 2、编译代码
      * @param userCodeFile
      * @return
      */
     public ExecuteMessage compileFile(File userCodeFile) {
-        String compileCmd = String.format("javac -source 8 -target 8 -encoding utf-8 %s", userCodeFile.getAbsolutePath());
+        String compileCmd = String.format("javac -encoding utf-8 %s", userCodeFile.getAbsolutePath());
         try {
             Process compileProcess = Runtime.getRuntime().exec(compileCmd);
             ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(compileProcess, "编译");
-            System.out.println(executeMessage);
             if (executeMessage.getExitValue() != 0) {
                 throw new RuntimeException("编译错误");
             }
             return executeMessage;
         } catch (Exception e) {
-//            return getResponse(e);
+//            return getErrorResponse(e);
             throw new RuntimeException(e);
         }
     }
 
     /**
-     * 3. 运行代码，得到输出结果
-     *
+     * 3、执行文件，获得执行结果列表
      * @param userCodeFile
      * @param inputList
      * @return
      */
-    public List<ExecuteMessage> runFiles(File userCodeFile, List<String> inputList) {
+    public List<ExecuteMessage> runFile(File userCodeFile, List<String> inputList) {
         String userCodeParentPath = userCodeFile.getParentFile().getAbsolutePath();
 
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
         for (String inputArgs : inputList) {
-            String runCmd = String.format("java -Xmx1024m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
-//            String runCmd = String.format("java -Xmx1024m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME, inputArgs);
-            // 超时控制
+//            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
+                // 超时控制
                 new Thread(() -> {
                     try {
                         Thread.sleep(TIME_OUT);
+                        System.out.println("超时了，中断");
                         runProcess.destroy();
-                    } catch (Exception e) {
+                    } catch (InterruptedException e) {
                         throw new RuntimeException(e);
                     }
                 }).start();
@@ -132,28 +124,27 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
                 System.out.println(executeMessage);
                 executeMessageList.add(executeMessage);
             } catch (Exception e) {
-                throw new RuntimeException("程序执行异常", e);
+                throw new RuntimeException("执行错误", e);
             }
         }
         return executeMessageList;
     }
 
     /**
-     * 4. 收集整理输出结果
-     *
+     * 4、获取输出结果
      * @param executeMessageList
      * @return
      */
     public ExecuteCodeResponse getOutputResponse(List<ExecuteMessage> executeMessageList) {
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         List<String> outputList = new ArrayList<>();
-        // 取用时最大值，用于判断是否超时
-        long maxTime = 0L;
+        // 取用时最大值，便于判断是否超时
+        long maxTime = 0;
         for (ExecuteMessage executeMessage : executeMessageList) {
             String errorMessage = executeMessage.getErrorMessage();
             if (StrUtil.isNotBlank(errorMessage)) {
-                executeCodeResponse.setMassage(errorMessage);
-                // 执行中存在错误
+                executeCodeResponse.setMessage(errorMessage);
+                // 用户提交的代码执行中存在错误
                 executeCodeResponse.setStatus(3);
                 break;
             }
@@ -170,15 +161,14 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
         executeCodeResponse.setOutputList(outputList);
         JudgeInfo judgeInfo = new JudgeInfo();
         judgeInfo.setTime(maxTime);
-        // 要借用第三方库来获取内存占用，非常麻烦
-//        judgeInfo.setMemory(100L);
+        // 要借助第三方库来获取内存占用，非常麻烦，此处不做实现
+//        judgeInfo.setMemory();
         executeCodeResponse.setJudgeInfo(judgeInfo);
         return executeCodeResponse;
     }
 
     /**
-     * 5. 文件清理
-     *
+     * 5、删除文件
      * @param userCodeFile
      * @return
      */
@@ -193,14 +183,15 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
     }
 
     /**
-     * 6. 获取错误响应
+     * 6、获取错误响应
+     *
      * @param e
      * @return
      */
-    private ExecuteCodeResponse getResponse(Throwable e) {
+    private ExecuteCodeResponse getErrorResponse(Throwable e) {
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         executeCodeResponse.setOutputList(new ArrayList<>());
-        executeCodeResponse.setMassage(e.getMessage());
+        executeCodeResponse.setMessage(e.getMessage());
         // 表示代码沙箱错误
         executeCodeResponse.setStatus(2);
         executeCodeResponse.setJudgeInfo(new JudgeInfo());
